Fixed alignment of flagged words

--- a/react-app/src/styles/style.scss
+++ b/react-app/src/styles/style.scss
@@ -55,7 +55,7 @@ button {
 
     .flagged-words {
         float: left;
-        margin-left: 5%;
+        margin-left: 5% !important;
     }
 
     .alerts {
